Per Chest Loottable Support  - Add the ability for each container to have a custom loot table.  - Fixed a bug with the bottomfill setting and rotated structures.  - "Fixed" an issue when the plugin would first be enabled.